[tool.poetry]
name = "statuscake-py"
version = "1.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# readme = "README.md"
packages = [
    { include = "statuscake" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "2.8.2"
setuptools = "65.3.0"
urllib3 = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
